// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The app provider extension should be able to load an iFrame via get 1`] = `
<iframe allowfullscreen="" class="oc-width-1-1 oc-height-1-1" src="https://example.test/d12ab86/loe009157-MzBw" title="&quot;example-app&quot; app content area"></iframe>

<!--v-if-->
`;

exports[`The app provider extension should be able to load an iFrame via post 1`] = `
<!--v-if-->

<div class="oc-height-1-1">
  <form action="https://example.test/d12ab86/loe009157-MzBw" method="post" target="app-iframe">
    <input class="oc-hidden" type="submit" value="[object Object]">
    <div>
      <input name="access_token" type="hidden" value="asdfsadfsadf">
    </div>
    <div>
      <input name="access_token_ttl" type="hidden" value="123456">
    </div>
  </form>
  <iframe allowfullscreen="" class="oc-width-1-1 oc-height-1-1" name="app-iframe" title="&quot;example-app&quot; app content area"></iframe>
</div>
`;

exports[`The app provider extension should fail for unauthenticated users 1`] = `
<!--v-if-->

<!--v-if-->
`;
